[gd_scene load_steps=3 format=3 uid="uid://7rok4acai7ph"]

[ext_resource type="Script" path="res://HUD.gd" id="1_yysxf"]
[ext_resource type="FontFile" uid="uid://b1udt0aiwf8ep" path="res://pixel_font.ttf" id="2_584qe"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yysxf")

[node name="Score" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -63.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_584qe")
theme_override_font_sizes/font_size = 45
text = "0"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_584qe")
theme_override_font_sizes/font_size = 40

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -19.0
offset_right = 79.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_584qe")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_584qe")
theme_override_font_sizes/font_size = 45
text = "0
"

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 196.0
offset_right = 0.5
offset_bottom = 325.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_584qe")
theme_override_font_sizes/font_size = 30
text = "Catch The Escaped Ghosts!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
